[package]
name = "eoraclerust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full", "time"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
dotenv = "0.15.0"
clickhouse = "0.11.1"
anyhow = "1.0"
url = "2.2.2"
